[project]
name = "csr-net2net"
version = "0.1.0"
description = "Continuous Signal Resampling for Network Scaling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "datasets>=2.19.0",
    "tensorboard>=2.16.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
